# threadspace

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  sync-repos.yml
api/: pagination.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/: settings.py  urls.py
core/: admin.py  apps.py  constants.py  encryption.py  fields.py  github.py  models.py  ranking.py  realtime.py  signals.py  test_realtime.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_comment.py  0003_alter_profile_options.py  0004_repo_post_repo.py  0005_githubaccount.py  0006_alter_githubaccount_access_token.py  0007_alter_post_image.py  0008_repo_source_repo_core_repo_stargaz_cd084f_idx_and_more.py  0009_chatmessage.py
deploy/: Caddyfile  deploy.sh  oci-launch-retry.ps1  oci-provision.ps1
docs/: DEPLOY.md  ORACLE_DEPLOY.md  PLAN.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts
realtime/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
realtime/src/: config.rs  event.rs  github.rs  handlers.rs  hub.rs  main.rs  redis_bridge.rs  state.rs  ws.rs
templates/: index.html
(+50 files in other folders)
