[project]
name = "threadspace"
version = "0.1.0"
description = "A build-in-public social network for the open-source world."
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["migrations", "static", "staticfiles", "media"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["core", "backend"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-ra"
