[package]
name = "threadspace-realtime"
version = "0.1.0"
edition = "2021"
description = "Real-time feed gateway + GitHub webhook ingestion for ThreadSpace."
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
redis = { version = "0.27", default-features = false, features = ["tokio-comp"], optional = true }

[features]
default = []
redis = ["dep:redis"]

[profile.release]
opt-level = 3
lto = "thin"
